--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -55,3 +55,72 @@ footer{
     align-items: center;
 }
 
+.search{
+    padding: 2rem 0rem;
+    background-color: #3B1C32;
+}
+
+.search-title{
+    display: flex;
+    justify-content: center;
+    margin: 2rem 0rem;
+}
+
+.search-title h2{
+    color: white;
+    font-size: 2rem;
+}
+
+.search-input{
+    display: flex;
+    justify-content: center;
+}
+
+.search-input input{
+    padding: 12px 10px;
+    width: 600px;
+    border-radius: 12px;
+    border: none;
+    font-size: medium;
+    font-weight: bold;
+}
+
+.books-label{
+    display: flex;
+    justify-content: center;
+    padding: 3rem 0rem;
+}
+
+.books-label h2{
+    font-size: 2rem;
+    color: #1A1A1D;
+    font-weight: bolder;
+}
+
+.books-show{
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+}
+
+.book-photo img{
+    height: 250px;
+    width: 200px;
+
+}
+
+.book-photo{
+    height: 300px;
+    width: 200px;
+    box-shadow: 0px 1px 6px 1px black;
+    text-align: center;
+
+
+}
+
+.book{
+    display: flex;
+    flex-direction: column;
+
+}
+
