--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -231,3 +231,25 @@ footer {
 .add-form__submit input:hover{
     background-color: #0f0f11;
 }
+
+.add-form__success {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-weight: 900;
+    padding: 0.5rem 0rem;
+    font-size: 0.8rem;
+    border-radius: 5px;
+    color: green;
+}
+
+.add-form__failed {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-weight: 900;
+    padding: 0.5rem 0rem;
+    font-size: 0.8rem;
+    border-radius: 5px;
+    color: red;
+}
