--- a/views/index.ejs
+++ b/views/index.ejs
@@ -37,5 +37,6 @@
     addButton.onclick = () => {
         location.href = 'add';
     };
+    console.log(books.length)
 </script>
 <%- include('partials/footer.ejs'); -%>
