--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,7 +8,7 @@
 </head>
 <body>    
     <nav>
-        <a id="nav-title">BookBits</a>
+        <a id="nav-title" href="/">BookBits</a>
         <ul class="nav-list">
             <li><a>Books</a></li>
             <li>Quotes</li>
