--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -100,6 +100,7 @@ footer {
 .books-show {
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
     gap: 20px;
 }
 
@@ -120,14 +121,16 @@ footer {
 
 .book {
     display: flex;
-    flex-direction: column;
-
+    justify-content: center;
+    flex-wrap: wrap;
+    flex-direction: row;
+    gap: 250px;
 }
 
 .add-book {
     display: flex;
     justify-content: center;
-    margin: 2rem 0rem;
+    margin: 3.5rem 0rem;
 }
 
 #add-book__button {
