--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -266,3 +266,49 @@ footer {
 a {
     text-decoration: none;
 }
+
+.nav-list a {
+    color: inherit;
+}
+
+.about-label h2{
+    text-align: center;
+    margin: 4rem 0rem;
+    font-weight: 700;
+    color: #22101d;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    text-shadow: #22101d 1px 0 1px;
+
+}
+
+.about-details {
+    display: flex;
+    justify-content: center;
+    gap: 10%;
+}
+
+.about-details__image img {
+    width: 500px;
+    height: 600px;
+    box-shadow: 0px 1px 6px 1px black;
+
+}
+
+.about-quote h2 {
+    margin: 2rem 0rem;
+    text-align: center;
+    color: #22101d;
+    font-weight: 500;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    text-shadow: #22101d 1px 0 1px;
+}
+
+.about-detail__description {
+    width: 400px;
+}
+
+.about-detail__description p {
+    letter-spacing: 2px;
+    text-indent: 50px;
+    line-height: 1.3;
+}
