--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,9 +10,9 @@
     <nav>
         <a id="nav-title" href="/">BookBits</a>
         <ul class="nav-list">
-            <li><a>Books</a></li>
-            <li>Quotes</li>
-            <li>About</li>
+            <li><a href="/books">Books</a></li>
+            <li><a href="/quotes">Quotes</a></li>
+            <li><a href="/about">About</a></li>
         </ul>
     </nav>
     <main>
