--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,14 @@
     <div class="search-input">
         <form action="/search" method="get">
             <label for="search-site"></label>
-            <input type="search" id="search-site" name="search site" ></input>
+            <input type="search" id="search-site" name="search site">
+            <button>  
+                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="search-form__svg" style=" height: 25px" >
+                    <path stroke-linecap="round" stroke-linejoin="round" d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z" />
+                </svg> 
+            </button>
+   
+                      
         </form>
     </div>
 </div>
@@ -41,6 +48,6 @@
     addButton.onclick = () => {
         location.href = 'add';
     };
-    console.log(books.length)
+    
 </script>
 <%- include('partials/footer.ejs'); -%>
