--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BookBits</title>
-    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="/styles/main.css">
 </head>
 <body>    
     <nav>
         <a id="nav-title" href="/">BookBits</a>
         <ul class="nav-list">
-            <li><a href="/books">Books</a></li>
+            <li><a href="/books/1">Books</a></li>
             <li><a href="/quotes">Quotes</a></li>
             <li><a href="/about">About</a></li>
         </ul>
