--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -345,3 +345,29 @@ a {
     text-indent: 50px;
     line-height: 1.3;
 }
+
+.change-page__button {
+    display: flex;
+    justify-content: center;
+    gap: 300px;
+    margin: 7rem 0rem 2rem;
+}
+
+.change-page__button button {
+    width: 6rem;
+    height: 3rem;
+    background-color: #1A1A1D;
+    border: none;
+    border-radius: 12px;
+}
+
+.change-page__button button:hover{
+    background-color: #0f0f11;
+}
+
+.change-page__button a {
+    color: white;
+    font-weight: 900;
+    font-size: 1rem;
+
+}
