Fix problem with button redirecting

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -365,7 +365,7 @@ a {
     background-color: #0f0f11;
 }
 
-.change-page__button a {
+.change-page__button p {
     color: white;
     font-weight: 900;
     font-size: 1rem;
