--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,17 +18,6 @@
         
     </div>
     <div class="search-autocomplete">
-        <!-- <div class="search-autocomplete__ul">
-            <ul>
-                <li>one</li>
-                <li>one</li>
-                <li>one</li>
-                <li>one</li>
-                <li>one</li>
-                <li>one</li>
-                <li>one</li>
-            </ul>
-        </div> -->
     </div>
 </div>
 <div>
@@ -42,7 +31,7 @@
                 <% books.forEach(book => { %>
                     
                 
-                <div class="book-photo">
+                <div class="book-photo" data-url="book/<%= book.id %>">
                     <img src="<%= book.image %>">
                     <p><%= book.author %></p>
                     <p><%= book.title %></p>
@@ -107,6 +96,14 @@
     });
     };
     
+    document.querySelectorAll('.book-photo').forEach((book) => {
+        book.addEventListener('click', () => {
+            const url = book.getAttribute('data-url');
+            if(url){
+                window.location.href = url
+            }
+        });
+    });
    
     
     
