--- a/views/book.ejs
+++ b/views/book.ejs
@@ -1,3 +1,24 @@
 <%- include('partials/header.ejs') -%>
-<h1>hello</h1>
+
+<div class="content">
+    <div class="content-book__details">
+        <div class="content-title">
+            <h2><%= book.title %></h2>
+        </div>
+        <div class="book-image">
+            <img src="<%= book.image %> %>" alt="book cover">
+        </div>
+        
+        <div class="content-author">
+            <p><%= book.author %></p>
+        </div>
+    </div>
+    
+    <div class="content-details">
+        <div class="content-details__description">
+           <%- book.content %>
+        </div>
+    </div>
+
+</div>
 <%- include('partials/footer.ejs') -%>
