--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -425,3 +425,78 @@ a {
     font-size: 1rem;
     line-height: 1.2;
 }
+
+.edit-button {
+    display: flex;
+    justify-content: center;
+    margin: 2rem 0rem;
+}
+
+.edit-button input {
+    background-color: #1A1A1D;
+    color: #6A1E55;
+    border-radius: 10px;
+    padding: 7px;
+    border: none;
+    font-weight: 900;
+    cursor: pointer;
+}
+
+.edit-button input:hover {
+    background-color: #0f0f11;
+}
+
+.edit {
+    display: flex;
+    align-items: center;
+    flex-direction: column;  
+}
+
+.edit h2 {
+    color: #22101d;
+    margin: 2rem 0rem;
+}
+
+.edit-form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 60%;
+    background-color: #6A1E55;
+    margin: 2rem 0rem;
+    padding: 2rem 0rem;
+    border-radius: 8px;
+    box-shadow: 0px 1px 6px 1px black;
+
+}
+
+.edit-form form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.edit-form label {
+    color: white;
+    font-size: 1.7rem;
+    margin-bottom: 2rem;
+    font-weight: 900;
+}
+
+#content-update {
+    padding: 10px;
+    width: 800px;
+    height: 400px;
+    border-radius: 12px;
+}
+
+.edit-form input {
+    background-color: #1A1A1D;
+    color: #6A1E55;
+    border-radius: 10px;
+    padding: 7px;
+    border: none;
+    font-weight: 900;
+    cursor: pointer;
+    margin-top: 2rem;
+}
