--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -13,36 +13,38 @@ main {
     padding: 0px;
 }
 
+a {
+    color: inherit;
+}
+
 nav {
     display: flex;
+    justify-content: space-between;
     align-items: center;
-    justify-content: start;
     background-color: #1A1A1D;
     height: 3.5rem;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-.nav-list {
-    list-style: none;
+nav h2 {
+    color: #6A1E55;
+    font-size: 2.5rem;
+    margin-left: 3rem;
+    font-weight: 800;
+}
+nav ul {
     display: flex;
-    justify-content: end;
+    list-style-type: none;
+    gap: 55px; 
+    margin-right: 5px;
+}
+
+nav li {
     font-size: 1.5rem;
-    gap: 5rem;
+    gap: 4rem;
     color: #6A1E55;
     font-weight: 900;
-}
-
-.nav-list li {
-    display: flex;
-    justify-content: end;
-}
-
-#nav-title {
-    color: #6A1E55;
-    font-size: 2.2rem;
-    margin-left: 3rem;
-    margin-right: 60%;
-    font-weight: 800;
+    margin-right: 10px;
 }
 
 footer {
@@ -228,23 +230,6 @@ footer {
     align-items: center;
     flex-direction: column;
 }
-
-/* .add-form__isbn label{
-    display: block;
-    text-align: center;
-    font-size: 1.5rem;
-    color: white;
-    margin-bottom: 2px;
-}
-
-.add-form__isbn input{
-    width: 40%;
-    padding: 1rem 0.4rem;
-    border-radius: 12px;
-    border: none;
-    font-size: 1rem;
-    margin-bottom: 2rem;
-} */
 
 .add-form label {
     display: block;
@@ -499,4 +484,92 @@ a {
     font-weight: 900;
     cursor: pointer;
     margin-top: 2rem;
+}
+
+@media screen and (max-width:1700px){
+    .add-form__submit input {
+        font-size: 1rem;
+    }
+
+    #content-update {
+        width: 450px;
+    }
+  
+}
+
+@media screen and (max-width:1400px){
+    .add-form__submit input {
+        font-size: 0.8rem;
+        width: 25%;
+    }
+  
+
+    .content-book__details {
+        display: none;
+    }
+
+    .content-details {
+        text-align: center;
+        display: flex;
+        justify-content: center;
+    }
+
+    .content {
+        display: flex;
+        justify-content: center;
+    }
+
+    #content-update {
+        width: 350px;
+    }
+
+}
+
+@media screen and (max-width: 1000px){
+    .about-details__image img {
+        display: none;
+    }
+
+    .about-details {
+        gap: 0px;
+    }
+
+    .about-detail__description{
+        text-align: center;
+    }
+
+}
+
+@media screen and (max-width:630px) {
+    nav h2{
+        font-size: 1.5rem;
+    }
+    
+    nav ul {
+        gap: 20px;
+    }
+
+    nav li {
+        font-size: 1rem;
+    }
+
+    .search-input input {
+        width: 400px;
+    }
+
+    .change-page__button {
+        gap: 200px;
+    }
+    .add-form__submit input {
+        font-size: 0.8rem;
+        width: 33%;
+    }
+    #content-update {
+        width: 250px;
+    }
+
+    .edit-form label {
+        text-align: center;
+    }
+    
 }
