--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,11 +8,13 @@
 </head>
 <body>    
     <nav>
-        <a id="nav-title" href="/">BookBits</a>
-        <ul class="nav-list">
+        <h2><a href="/">BookBits</a></h2>
+        <ul>
             <li><a href="/books/1">Books</a></li>
             <li><a href="/quotes">Quotes</a></li>
             <li><a href="/about">About</a></li>
         </ul>
+    </nav>
+        
     </nav>
     <main>
