--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -486,6 +486,46 @@ a {
     margin-top: 2rem;
 }
 
+.quotes{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 3rem 0rem;
+}
+
+.quote {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 2rem 2rem;
+
+}
+
+.quote-content h3 {
+    font-size: 1.5rem;
+    font-weight: 500;
+    font-family: sans-serif;
+    text-shadow: #6A1E55 1px 0 5px;
+    color: #6A1E55;
+}
+
+.quote-content{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.quotes button {
+    background-color: #1A1A1D;
+    color: #6A1E55;
+    border-radius: 10px;
+    padding: 7px;
+    border: none;
+    font-weight: 900;
+    cursor: pointer;
+    font-size: 1.4rem;
+}
+
 @media screen and (max-width:1700px){
     .add-form__submit input {
         font-size: 1rem;
